--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,6 +4,10 @@ server {
     root   /var/www/html;
     index  index.php;
 
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php(/|$) {
         fastcgi_pass rabphp80:9000;
         fastcgi_split_path_info       ^(.+\.php)(.*)$;
