--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,34 @@
+# server {
+#     listen       80;
+#     server_name  localhost;
+#     root   /var/www/html;
+#     index  index.php;
+
+#     location / {
+#         try_files $uri $uri/ /index.php?$query_string;
+#     }
+
+#     location ~ \.php(/|$) {
+#         fastcgi_pass rabphp80:9000;
+#         fastcgi_split_path_info       ^(.+\.php)(.*)$;
+#         fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO        $fastcgi_path_info;
+#         fastcgi_buffer_size 128k;
+#         fastcgi_buffers 4 256k;
+#         fastcgi_busy_buffers_size 256k;
+#         include        fastcgi_params;
+#     }
+
+#     error_page   500 502 503 504  /50x.html;
+#     location = /50x.html {
+#         root   /var/www/html;
+#     }
+# }
+
 server {
     listen       80;
     server_name  localhost;
-    root   /var/www/html;
+    root   /var/www/html/rabbitmq-test/public;
     index  index.php;
 
     location / {
