--- a/docker/php80/Dockerfile
+++ b/docker/php80/Dockerfile
@@ -37,9 +37,11 @@ RUN install-php-extensions sockets
 # RUN chown -R jason:jason /var/www/html
 # USER jason
 
-RUN apk add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
-
 COPY php.ini /usr/local/etc/php/conf.d/
 # COPY startup.sh /usr/local/bin
 COPY startup.sh /
 RUN ["chmod", "777", "/startup.sh"]
+
+RUN apk add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
+USER www-data
+
