rabbitmq queue config

--- a/www/rabbitmq-test/.env.example
+++ b/www/rabbitmq-test/.env.example
@@ -15,10 +15,17 @@ DB_DATABASE=rabbit_test
 DB_USERNAME=root
 DB_PASSWORD=jason
 
+RABBITMQ_QUEUE=notification.fcm
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=jason
+RABBITMQ_PASSWORD=jason
+RABBITMQ_VHOST=/
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
