--- a/www/rabbitmq-test/.env.example
+++ b/www/rabbitmq-test/.env.example
@@ -8,12 +8,15 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=rabmysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=mysql
+DB_HOST=rabmysql
 DB_PORT=3306
 DB_DATABASE=rabbit_test
 DB_USERNAME=root
 DB_PASSWORD=jason
+
+FCM_URL=https://fcm.googleapis.com/fcm/send
+FCM_KEY=123
 
 RABBITMQ_QUEUE=notification.fcm
 RABBITMQ_HOST=rabbitmq
